[package]
name = "telegram-buktikanbot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
dotenvy = "0.15"
rand = "0.8"
captcha = "0.0.9"
chrono = "0.4"
chrono-tz = "0.8"
