[package]
name = "telegram-buktikanbot"
version = "1.6.1"
edition = "2024"

[dependencies]
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls", "webhooks-axum"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
dotenvy = "0.15"
rand = "0.8"
captcha = "0.0.9"
chrono = "0.4"
chrono-tz = "0.8"
serde_json = "1"
url = "2"
